Changement de quelque images

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </div>
   </header>
-  <section class="banner">
+  <section class="section_banner">
     <div class="container_banner">
       <!-- banner text -->
       <div class="banner_text">
@@ -70,7 +70,7 @@
   </section>
 
   <!-- Section presentation -->
-   <section class="presentation">
+   <section class="section_presentation">
     <div class="container_presentation">
       <!-- Photo produit -->
        <div class="presentation_produit">
@@ -202,7 +202,7 @@
 
             <!-- produit item 5-->
             <div class="produit_items produit_item_2">
-              <img src="./src/assets/images/side-view-red-fruit-smoothie-with-tubules-beverages-dried-lemon-drops-serving-napkins(1).jpg" alt="jus de bissap" width="200px" height="200px">
+              <img src="./src/assets/images/julia-zolotova-M_xIaxQE3Ms-unsplash.jpg" alt="jus de bissap" width="200px" height="200px">
               <!-- title -->
               <div class="produit_item_title">
                 <h3>Arraw</h3>
@@ -223,7 +223,7 @@
 
             <!-- produit item 6-->
             <div class="produit_items produit_item_2">
-              <img src="./src/assets/images/side-view-red-fruit-smoothie-with-tubules-beverages-dried-lemon-drops-serving-napkins(1).jpg" alt="jus de bissap" width="200px" height="200px">
+              <img src="./src/assets/images/julia-zolotova-M_xIaxQE3Ms-unsplash.jpg" alt="jus de bissap" width="200px" height="200px">
               <!-- title -->
               <div class="produit_item_title">
                 <h3>Arraw</h3>
@@ -244,7 +244,7 @@
 
             <!-- produit item 7-->
             <div class="produit_items produit_item_2">
-              <img src="./src/assets/images/side-view-red-fruit-smoothie-with-tubules-beverages-dried-lemon-drops-serving-napkins(1).jpg" alt="jus de bissap" width="200px" height="200px">
+              <img src="./src/assets/images/julia-zolotova-M_xIaxQE3Ms-unsplash.jpg" alt="jus de bissap" width="200px" height="200px">
               <!-- title -->
               <div class="produit_item_title">
                 <h3>Arraw</h3>
@@ -265,7 +265,7 @@
 
             <!-- produit item 2-->
             <div class="produit_items produit_item_2">
-              <img src="./src/assets/images/side-view-red-fruit-smoothie-with-tubules-beverages-dried-lemon-drops-serving-napkins(1).jpg" alt="jus de bissap" width="200px" height="200px">
+              <img src="./src/assets/images/julia-zolotova-M_xIaxQE3Ms-unsplash.jpg" alt="jus de bissap" width="200px" height="200px">
               <!-- title -->
               <div class="produit_item_title">
                 <h3>Arraw</h3>
@@ -288,7 +288,7 @@
         </div>
     </section>
 
-    <section class="temoignages">
+    <section class="section_temoignages">
       <!-- title -->
       <div class="temoignages_title">
         <h2>Temoignages</h2>
@@ -356,7 +356,7 @@
         <!-- images -->
         <div class="details_imgRight">
           <img src="./src/assets/images/side-view-red-fruit-smoothie-with-tubules-beverages-dried-lemon-drops-serving-napkins(1).jpg" alt="images de jus de fruit" width="400px" height="300px">
-          <img src="./src/assets/images/side-view-red-fruit-smoothie-with-tubules-beverages-dried-lemon-drops-serving-napkins(1).jpg" alt="images de jus de fruit" width="400px" height="300px">
+          <img src="./src/assets/images/julia-zolotova-M_xIaxQE3Ms-unsplash.jpg" alt="images de jus de fruit" width="400px" height="300px">
         </div>
       </div>
     </section>
