modification des images

--- a/index.html
+++ b/index.html
@@ -90,17 +90,17 @@
 
             <!-- img_1 -->
             <div class="description_produit_img__1">
-              <img src="./src/assets/images/side-view-red-fruit-smoothie-with-tubules-beverages-dried-lemon-drops-serving-napkins(1).jpg" alt="logo" width="200px" height="200px" />
+              <img src="./src/assets/images/ernest-porzi-Z-Y6I45f9kQ-unsplash.jpg" alt="logo" width="200px" height="200px" />
             </div>
 
             <!-- img_2 -->
             <div class="description_produit_img__1">
-              <img src="./src/assets/images/side-view-red-fruit-smoothie-with-tubules-beverages-dried-lemon-drops-serving-napkins(1).jpg" alt="logo" width="200px" height="200px" />
+              <img src="./src/assets/images/deniz-altindas-jVLahCBXaJs-unsplash.jpg" alt="logo" width="200px" height="200px" />
             </div>
 
             <!-- img_3 -->
             <div class="description_produit_img__1">
-              <img src="./src/assets/images/side-view-red-fruit-smoothie-with-tubules-beverages-dried-lemon-drops-serving-napkins(1).jpg" alt="logo" width="200px" height="200px" />
+              <img src="./src/assets/images/dan-gold-4_jhDO54BYg-unsplash.jpg" alt="logo" width="200px" height="200px" />
             </div>
           </div>  
         </div>
@@ -301,7 +301,7 @@
           <img src="./src/assets/images/adrien-lopes-y75v-ovm9TU-unsplash.jpg" alt="photo" width="150px" height="150px">
           <!-- title -->
           <div class="temoignage_title">
-            <h3>Bamba Diagne</h3>
+            <h3>Melvyn</h3>
           </div>
           <!-- content -->
            <div class="temoignage_content">
@@ -312,10 +312,10 @@
          </div>
         <!-- temoignage_2 -->
          <div class="temoignage temoignage_2">
-          <img src="./src/assets/images/adrien-lopes-y75v-ovm9TU-unsplash.jpg" alt="photo" width="150px" height="150px">
+          <img src="./src/assets/images/elizeu-dias-2EGNqazbAMk-unsplash.jpg" alt="photo" width="150px" height="150px">
           <!-- title -->
           <div class="temoignage_title">
-            <h3>Bamba Diagne</h3>
+            <h3>Mamadou</h3>
           </div>
           <!-- content -->
            <div class="temoignage_content">
@@ -326,10 +326,10 @@
          </div>
         <!-- temoignage_3 -->
          <div class="temoignage temoignage_3">
-          <img src="./src/assets/images/adrien-lopes-y75v-ovm9TU-unsplash.jpg" alt="photo" width="150px" height="150px">
+          <img src="./src/assets/images/eye-for-ebony-aZzXKGcyWqk-unsplash.jpg" alt="photo" width="150px" height="150px">
           <!-- title -->
           <div class="temoignage_title">
-            <h3>Bamba Diagne</h3>
+            <h3>Eva</h3>
           </div>
           <!-- content -->
            <div class="temoignage_content">
@@ -341,9 +341,9 @@
        </div>
     </section>
 
-    <section class="section_details">
+    <!-- <section class="section_details">
       <div class="container_details">
-        <!-- image et texte -->
+       image et texte 
         <div class="details_imgLeft">
           <img src="./src/assets/images/side-view-red-fruit-smoothie-with-tubules-beverages-dried-lemon-drops-serving-napkins(1).jpg" alt="images de jus de fruit" width="400px" height="300px">
           <div class="details_text">
@@ -353,13 +353,13 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus minus ad neque, nihil ipsum distinctio nobis, repudiandae laboriosam delectus voluptatem aspernatur. Dolore odio maiores beatae eaque nobis cupiditate, debitis corrupti?</p>
           </div>
         </div>
-        <!-- images -->
+         images 
         <div class="details_imgRight">
           <img src="./src/assets/images/side-view-red-fruit-smoothie-with-tubules-beverages-dried-lemon-drops-serving-napkins(1).jpg" alt="images de jus de fruit" width="400px" height="300px">
           <img src="./src/assets/images/julia-zolotova-M_xIaxQE3Ms-unsplash.jpg" alt="images de jus de fruit" width="400px" height="300px">
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section class="section_newsletter">
       <form action="">
@@ -381,10 +381,10 @@
        <div class="container_services">
         <!-- service_1 -->
          <div class="service service_1">
-          <img src="./src/assets/icons/Kawaii Rice.png" alt="logo" width="100px" height="100px">
+          <img src="./src/assets/icons/icons8-truck-100.png" alt="logo" width="80px" height="80px">
           <!-- title -->
           <div class="service_title">
-            <h3>Bamba Diagne</h3>
+            <h3>Logistique et Distribution </h3><br>
           </div>
           <!-- content -->
            <div class="service_content">
@@ -395,10 +395,10 @@
           </div>
         <!-- service_1 -->
          <div class="service service_1">
-          <img src="./src/assets/icons/Kawaii Rice.png" alt="logo" width="100px" height="100px">
+          <img src="./src/assets/icons/icons8-entrepôt-100.png" alt="logo" width="80px" height="80px">
           <!-- title -->
           <div class="service_title">
-            <h3>Bamba Diagne</h3>
+            <h3> Stockage et Conditionnement</h3>
           </div>
           <!-- content -->
            <div class="service_content">
@@ -409,10 +409,10 @@
          </div>
         <!-- service_1 -->
          <div class="service service_1">
-          <img src="./src/assets/icons/Kawaii Rice.png" alt="logo" width="100px" height="100px">
+          <img src="./src/assets/icons/icons8-blé-100.png" alt="logo" width="80px" height="80px">
           <!-- title -->
           <div class="service_title">
-            <h3>Bamba Diagne</h3>
+            <h3>Transformation des Produits Agricoles</h3>
           </div>
           <!-- content -->
            <div class="service_content">
